--- a/index.html
+++ b/index.html
@@ -65,6 +65,7 @@
     <hr size="3" noshade>
     <a href="hobbies.html">MY HOBBIES</a>
     <br>
-    <a href="contact.html">Contact me</a>
+	  <h3> to contact me visit</h3>
+    <a href="form.html">Contact me</a>
   </body>
 </html>
